# surcos

./: Doxyfile  Makefile  README.es.md  README.fr.md  README.md  license.md  logo.rc  makefile  makefile.freebsd  makefile.mingw  makefile.no  makefile.no.mingw  makefile.no.testing  makefile.no.testing.mingw32  makefile.no.testing.mingw64  makefile.solaris  makefile.testing  makefile.testing.mingw32  makefile.testing.mingw64  makefile.win  update_format_from_5_to_6.c  update_version  update_version.sh
5.2/: Doxyfile  Makefile.in  TODO  configure.ac
5.2/examples/case3/: field.in
5.2/examples/case6/: input.in
5.2/examples/caseI/: field.in  input.in  probe.in
5.2/examples/caseIII/: input.in  mesh.in
5.2/examples/caseIV/: input.in
5.2/examples/caseIX/: input.in
5.2/examples/caseV/: input.in
5.2/examples/caseVI/: input.in  times.in
5.2/examples/caseVII/: input.in
5.2/examples/caseVIII/: input.in
5.2/examples/caseX/: input.in
5.2/examples/caseXII/: input.in
5.2/examples/furrows120x200/: field.in  input.in  times.in
5.2/examples/furrows30x50/: field.in  input.in  mesh.in  probe.in  times.in
5.2/graph/: diagram_input.tex
5.2/locale/es/LC_MESSAGES/: surcos.po  surcos_gui.po
5.2/locale/fr/LC_MESSAGES/: surcos.po  surcos_gui.po
5.2/locale/it/LC_MESSAGES/: surcos.po  surcos_gui.po
5.2/manual/: ppal.tex  ppal_EN.tex
5.2/manual/bib/: references.bib
5.2/manual/bib/.svn/: entries
5.2/manual/capitulos/: Capitulo1.tex  Capitulo3.tex  Chapter1.tex  Chapter3.tex
5.2/manual/images/: universidad_mini.eps
5.2/src/: calibrate.c  calibrate.h  config.h  configFurrows.c  configFurrows.h  configGeometry.c  configGeometry.h  configIrrigation.c  configIrrigation.h  configProbes.c  configProbes.h  configTimes.c  configTimes.h  configWindow.c  configWindow.h  field.c  field.h  furrow.c  furrow.h  graphics.c  graphics.h  kernel.c  kernel.h  mainWindow.c  mainWindow.h  parameters.c  parameters.h  scheme.c  scheme.h  surcos.c  surcos_gui.c
5.5/: Doxyfile  Makefile.in  README.md  configure.ac
5.5/examples/scenario8/: input.in
5.5/graph/: diagram_geometry.tex  fr.tex
5.5/locale/es/LC_MESSAGES/: surcos.po  surcos_gui.po
5.5/locale/fr/LC_MESSAGES/: surcos.po  surcos_gui.po
5.5/locale/it/LC_MESSAGES/: surcos.po  surcos_gui.po
5.5/manual/: ppal.tex  ppal_EN.tex
5.5/src/: config.h  config.h.in  configFurrows.c  configFurrows.h  configGeometry.c  configGeometry.h  configIrrigation.c  configIrrigation.h  configProbes.c  configProbes.h  configTimes.c  configTimes.h  configWindow.c  configWindow.h  field.c  field.h  furrow.c  furrow.h  graphics.c  graphics.h  kernel.c  kernel.h  mainWindow.c  mainWindow.h  parameters.c  parameters.h  scheme.c  scheme.h  surcos.c  surcos_gui.c
5.6/: Doxyfile  Makefile.in  README.md  configure.ac
5.6/examples/furrows120x200/: probe.in
5.6/examples/furrows30x50/: input.in  times.in
5.6/examples/scenario21/: probe.in
5.6/examples/scenario5/: input.in
5.6/graph/: en.tex
5.6/locale/es/LC_MESSAGES/: surcos.po  surcos_gui.po
5.6/locale/fr/LC_MESSAGES/: surcos.po  surcos_gui.po
5.6/locale/it/LC_MESSAGES/: surcos.po  surcos_gui.po
5.6/manual/: ppal.tex  ppal_EN.tex
5.6/manual/capitulos/: Capitulo1.tex  Chapter1.tex
5.6/src/: config.h  config.h.in  configFurrows.c  configFurrows.h  configGeometry.c  configGeometry.h  configIrrigation.c  configIrrigation.h  configProbes.c  configProbes.h  configTimes.c  configTimes.h  configWindow.c  configWindow.h  field.c  field.h  furrow.c  furrow.h  graphics.c  graphics.h  kernel.c  kernel.h  main.c  mainWindow.c  mainWindow.h  parameters.c  parameters.h  scheme.c  scheme.h  surcos.c  surcos.h  surcos_gui.c
5.8/: Doxyfile  Makefile.in  TODO  configure.ac  fetch.pl
5.8/examples/furrow1/: field.in  input.in  probe.in  times.in
5.8/examples/scenario1/: input.in
5.8/examples/scenario2/: input.in
5.8/graph/: it.tex
5.8/locale/es/LC_MESSAGES/: surcos.po  surcos_gui.po
5.8/locale/fr/LC_MESSAGES/: surcos.po  surcos_gui.po
5.8/locale/it/LC_MESSAGES/: surcos.po  surcos_gui.po
5.8/manual/: ppal.tex  ppal_EN.tex
5.8/src/: configFurrows.c  configFurrows.h  configGeometry.c  configGeometry.h  configIrrigation.c  configIrrigation.h  configProbes.c  configProbes.h  configTimes.c  configTimes.h  configWindow.c  configWindow.h  field.c  furrow.c  furrow.h  graphics.c  graphics.h  kernel.c  kernel.h  main.c  mainWindow.c  mainWindow.h  parameters.c  scheme.c  surcos.c  surcos.h  surcos_gui.c
6.0/: Doxyfile  Makefile.in  TODO  build.sh  configure.ac  make-links.sh
6.0/check-errors/: bad-cfl.json  bad-distribution-cells.json  bad-furrow-H.json  bad-furrow-R.json  bad-furrow-W.json  bad-furrow-epsilon.json  bad-furrow-i2.json  bad-furrow-initial-conditions-q.json  bad-furrow-n.json  bad-input-tf.json  bad-input-x.json  bad-input-y.json  bad-model-diffusion-soil.json  bad-model-fertilizer.json  bad-model-infiltration.json  bad-probe-x.json  bad-simulation-time.json  bad-x1.json  bad-x2.json  bad-x3.json  bad-y0.json  bad-y2.json  bad-z0.json  bad-z1.json  bad-z2.json  bad-z3.json
6.0/examples/: furrow1.json  furrows120x200.json  furrows30x50.json  scenario1.json  scenario10.json  scenario11.json  scenario12.json  scenario13.json  scenario14.json  scenario15.json  scenario16.json  scenario17.json  scenario18.json  scenario19.json  scenario2.json  scenario20.json  scenario21.json  scenario3.json  scenario4.json  scenario5.json  scenario6.json  scenario7.json  scenario8.json  scenario9.json
6.0/locale/es/LC_MESSAGES/: surcos.po  surcos_gui.po
6.0/locale/fr/LC_MESSAGES/: surcos.po  surcos_gui.po
6.0/locale/it/LC_MESSAGES/: surcos.po  (+1 more)
6.0/manual/: user-manual-en.tex  user-manual-es.tex
6.0/manual/chapters/: Chapter1.tex  Chapter2.tex
6.0/src/: configFurrows.c  configFurrows.h  configGeometry.c  configIrrigation.c  configIrrigation.h  configProbes.c  configProbes.h  configTimes.c  configWindow.c  field.c  furrow.c  furrow.h  graphics.c  graphics.h  kernel.c  main.c  mainWindow.c  mainWindow.h  parameters.c  parameters.h  scheme.c  scheme.h  surcos.c  surcos.h  surcos_gui.c
(+335 files in other folders)
